--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,5 +15,6 @@
 	"Where to meet" : "Where to meet ?",
 	"Want to say hello" : "Want to talk about your project ?",
 	"Want to share" : "Want to share ?",
-	"CONTACT US" : "CONTACT US"
+	"CONTACT US" : "CONTACT US",
+	"Slider" : "Example of our work"
 }
