--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -15,5 +15,6 @@
 	"Where to meet" : "Où se rencontrer ?",
 	"Want to say hello" : "Vous voulez parler de votre projet ?",
 	"Want to share" : "Envie de partager ?",
-	"CONTACT US" : "CONTACTEZ NOUS"
+	"CONTACT US" : "CONTACTEZ NOUS",
+	"Slider" : "Exemple de notre travail"
 }
