Ajout lien vers le slider, et sous titre d'aide

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,5 +16,7 @@
 	"Want to say hello" : "Want to talk about your project ?",
 	"Want to share" : "Want to share ?",
 	"CONTACT US" : "CONTACT US",
-	"Slider" : "Example of our work"
+	"Slider" : "Example of our work",
+	"Example" : "Example",
+	"Slider Tips" : "You can move the cursor to see the before / after effect"
 }
