--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -16,5 +16,7 @@
 	"Want to say hello" : "Vous voulez parler de votre projet ?",
 	"Want to share" : "Envie de partager ?",
 	"CONTACT US" : "CONTACTEZ NOUS",
-	"Slider" : "Exemple de notre travail"
+	"Slider" : "Exemple de notre travail",
+	"Example" : "Exemple",
+	"Slider Tips" : "Vous pouvez déplacer le curseur pour voir l'effet avant / après"
 }
