--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -11,7 +11,7 @@
 	"Design Landscape Text" : "Our main goal is to collaborate with you to find out the garden you wish, and provides hand-drawing and computer drawing to visualize the possibilities.",
 	"Provide Support Text" : "With the help of camera, drone and computer, we provide many possibilities to display your ideas directly in your current garden.",
 	"Green Expertise Text" :"Passionated and expert, we will give you the best advices for the choice of plants, their disposition and their harmony.",
-	"Contribution" : "© 2017 Bertrand Samson, page inspired by Rubik",
+	"Contribution" : "© 2017 Bertrand Samson",
 	"Where to meet" : "Where to meet ?",
 	"Want to say hello" : "Want to talk about your project ?",
 	"Want to share" : "Want to share ?",
