--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -11,7 +11,7 @@
 	"Design Landscape Text" : "Notre objectif principal est de collaborer avec vous, pour réfléchir au jardin de vos rêves, et vous fournir les dessins (fait main ou assisté par ordinateur) pour vous permettre de visualiser les différentes possibilités.",
 	"Provide Support Text" : "Avec l'aide d'appareil photos, de drône et d'ordinateur, nous vous fournissons de nombreuses possibilités pour projeter directement vos idées sur votre jardin actuel.",
 	"Green Expertise Text" :"Passioné et expert, nous vous donnons les meilleurs conseils sur le choix de vos plantes, leur disposition et leur harmonie.",
-	"Contribution" : "© 2017 Bertrand Samson, page inspirée par Rubik",
+	"Contribution" : "© 2017 Bertrand Samson",
 	"Where to meet" : "Où se rencontrer ?",
 	"Want to say hello" : "Vous voulez parler de votre projet ?",
 	"Want to share" : "Envie de partager ?",
