Ajustement affichage des infos de contact, mise à jour nom d'entreprise et texte

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,7 +15,7 @@
 	"Where to meet" : "Where to meet ?",
 	"Want to say hello" : "Want to talk about your project ?",
 	"Want to share" : "Want to share ?",
-	"CONTACT US" : "CONTACT US",
+	"CONTACT US" : "CONTACT ME",
 	"Slider" : "Example of our work",
 	"Example" : "Example",
 	"Slider Tips" : "You can move the cursor to see the before / after effect"
