--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,21 +1,21 @@
 {
 	"About" : "À propos de",
 	"About Company" : "À propos de {{company}}",
-	"What we do" : "Ce que nous faisons",
-	"Contact" : "Nous contacter",
-	"Subtitle" : "{{company}} vous permet d'aménager, ensemble, votre propre Eden.",
-	"Introduction section 1": "{{company}} est une startup qui vous assistera pour votre projet d'aménagement extérieur, et vous accompagnera pour la réalisation. A la suite de notre travail, vous pouvez effectuer vous-même votre jardin en suivant notre guide pas à pas, ou consulter nos entreprises d'aménagement paysagiste proche de chez vous.",
+	"What we do" : "Ce que je fais",
+	"Contact" : "Me contacter",
+	"Subtitle" : "Ensemble, construisons votre projet",
+	"Introduction section 1": "Dessinatrice paysagiste ayant travaillé pour le domaine public et les entreprises aussi bien que pour les particuliers, je vous assisterai pour tous vos projets d'aménagement extérieur. Nous monterons ensemble votre dossier, puis je vous le présenterai sous différentes formes : photomontage, dessin, plan, vue 3D, palette végétale... Ainsi, vous aurez un dossier complet, donnant une vue générale du projet.",
 	"Design Landscape" : "Imaginer le paysage",	
 	"Provide Support" : "Visualisation assistée",
 	"Green Expertise" : "Expertise des végétaux",
-	"Design Landscape Text" : "Notre objectif principal est de collaborer avec vous, pour réfléchir au jardin de vos rêves, et vous fournir les dessins (fait main ou assisté par ordinateur) pour vous permettre de visualiser les différentes possibilités.",
-	"Provide Support Text" : "Avec l'aide d'appareil photos, de drône et d'ordinateur, nous vous fournissons de nombreuses possibilités pour projeter directement vos idées sur votre jardin actuel.",
-	"Green Expertise Text" :"Passioné et expert, nous vous donnons les meilleurs conseils sur le choix de vos plantes, leur disposition et leur harmonie.",
+	"Design Landscape Text" : "Mon objectif est de collaborer avec vous, pour réfléchir au jardin le plus adapté et vous fournir les dessins (fait main ou assisté par ordinateur) pour vous permettre de visualiser les différentes possibilités.",
+	"Provide Support Text" : "A partir de photos du jardin ou d'un plan, je pourrai vous montrer les différentes opportunités qui s'offrent à vous.",
+	"Green Expertise Text" :"Je vous donnerai tous les conseils pour le choix des plantes, afin que le projet soit adapté au climat et que les végétaux soient en harmonie.",
 	"Contribution" : "© 2017 Bertrand Samson",
-	"Where to meet" : "Où se rencontrer ?",
+	"Where to meet" : "Où me rencontrer ?",
 	"Want to say hello" : "Vous voulez parler de votre projet ?",
 	"Want to share" : "Envie de partager ?",
-	"CONTACT US" : "CONTACTEZ NOUS",
+	"CONTACT US" : "CONTACTEZ MOI",
 	"Slider" : "Exemple de notre travail",
 	"Example" : "Exemple",
 	"Slider Tips" : "Vous pouvez déplacer le curseur pour voir l'effet avant / après"
