Reprise du wording

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,16 +1,16 @@
 {
 	"About" : "About",
 	"About Company" : "About {{company}}",
-	"What we do" : "What we do",
-	"Contact" : "Contact",
-	"Subtitle" : "{{company}} allow you to design, together, your own Eden.",
-	"Introduction section 1": "{{company}} is a startup that designs for you a custom exterior design project and accompany you for the realization. As a result of our work, you can do your garden yourself by following our step by step advice or consulting selected landscape companies near you.",
+	"What we do" : "What I do",
+	"Contact" : "Contact Me",
+	"Subtitle" : "Together, design your project",
+	"Introduction section 1": "As a landscape designer, I worked for public and private partners. I will assist you for all your landscaping projects. Together, we will build your project, then, I will show you the render in several formats : photo montage, drawing, plan, 3D view, plant pallet. So, you will have a complete folder, giving you a global overview of your project.",
 	"Design Landscape" : "Design Landscape",
 	"Provide Support" : "Provide Support",
 	"Green Expertise" : "Green Expertise",
-	"Design Landscape Text" : "Our main goal is to collaborate with you to find out the garden you wish, and provides hand-drawing and computer drawing to visualize the possibilities.",
-	"Provide Support Text" : "With the help of camera, drone and computer, we provide many possibilities to display your ideas directly in your current garden.",
-	"Green Expertise Text" :"Passionated and expert, we will give you the best advices for the choice of plants, their disposition and their harmony.",
+	"Design Landscape Text" : "My goal is to collaborate with you, to think about the most adapted gardin, and provide you drawings (hand drawing or modelised by computer) and then, give you a concrete visualisation of possibilities.",
+	"Provide Support Text" : "From plan or directly from a picture of your garden, I can show you a lot of possibilities.",
+	"Green Expertise Text" :"I will give you all the advices to choose, in order to have plants well adapted between each other and well adapted to the climat.",
 	"Contribution" : "© 2017 Bertrand Samson",
 	"Where to meet" : "Where to meet ?",
 	"Want to say hello" : "Want to talk about your project ?",
