--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -4,12 +4,12 @@
 	"What we do" : "Ce que je fais",
 	"Contact" : "Me contacter",
 	"Subtitle" : "Ensemble, construisons votre projet",
-	"Introduction section 1": "Dessinatrice paysagiste ayant travaillé pour le domaine public et les entreprises aussi bien que pour les particuliers, je vous assisterai pour tous vos projets d'aménagement extérieur. Nous monterons ensemble votre dossier, puis je vous le présenterai sous différentes formes : photomontage, dessin, plan, vue 3D, palette végétale... Ainsi, vous aurez un dossier complet, donnant une vue générale du projet.",
+	"Introduction section 1": "Dessinatrice paysagiste ayant travaillé pour le domaine public et les entreprises aussi bien que pour les particuliers, je vous assisterai pour tous vos projets d'aménagement extérieur. Nous monterons ensemble votre dossier, puis je vous le présenterai sous différentes formes : photomontage, dessin, plan, vue 3D, palette végétale. Ainsi, vous aurez un dossier complet, donnant une vue générale du projet.",
 	"Design Landscape" : "Imaginer le paysage",	
 	"Provide Support" : "Visualisation assistée",
 	"Green Expertise" : "Expertise des végétaux",
-	"Design Landscape Text" : "Mon objectif est de collaborer avec vous, pour réfléchir au jardin le plus adapté et vous fournir les dessins (fait main ou assisté par ordinateur) pour vous permettre de visualiser les différentes possibilités.",
-	"Provide Support Text" : "A partir de photos du jardin ou d'un plan, je pourrai vous montrer les différentes opportunités qui s'offrent à vous.",
+	"Design Landscape Text" : "Mon objectif est de collaborer avec vous, pour réfléchir au jardin le plus adapté et vous fournir les dessins (fait main ou assisté par ordinateur) et ainsi vous donner une visualisation concrète des différentes possibilités.",
+	"Provide Support Text" : "A partir d'un plan ou directement via une photo du jardin, je pourrai vous montrer les différentes opportunités qui s'offrent à vous.",
 	"Green Expertise Text" :"Je vous donnerai tous les conseils pour le choix des plantes, afin que le projet soit adapté au climat et que les végétaux soient en harmonie.",
 	"Contribution" : "© 2017 Bertrand Samson",
 	"Where to meet" : "Où me rencontrer ?",
