--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -33,7 +33,9 @@
 	"Advice Title" : "Conseils techniques",
 	"Advice Text" :"Je vous accompagnerai dans le choix des végétaux, pour que le projet soit adapté au climat, et je vous guiderai dans le choix des matériaux pour un espace harmonieux.",
 	
-	"Resume Text" : "Après un bac Scientifique, j'ai effectué un BTSA Aménagement du Paysage au lycée horticole d'Evreux. Pour aller plus loin dans ce domaine, j'ai poursuivi mes études avec une licence professionnelle Aménagement du paysage option infographie. Après une expérience d'environ 3 ans d'infographiste pour des projets du domaine public en Normandie, j'ai déménagé dans les Alpes-Maritimes. J'y ai travaillé 3 ans en tant que dessinatrice mais aussi en tant qu'ouvrier paysagiste, ce qui m'a permis d'approfondie mes connaissances techniques. Forte de toutes ces expériences, j'ai décidé de créer Graphite Paysage pour relever plus de défis et vous accompagner dans tous vos projets.",
+	"Resume Text 1" : "Après un bac Scientifique, j'ai effectué un BTSA Aménagement du Paysage au lycée horticole d'Evreux. Pour aller plus loin dans ce domaine, j'ai poursuivi mes études avec une licence professionnelle Aménagement du paysage option infographie.",
+	"Resume Text 2" : "Après une expérience d'environ 3 ans d'infographiste pour des projets du domaine public en Normandie, j'ai déménagé dans les Alpes-Maritimes. J'y ai travaillé 3 ans en tant que dessinatrice mais aussi en tant qu'ouvrier paysagiste, ce qui m'a permis d'approfondie mes connaissances techniques.",
+	"Resume Text 3" : "Forte de toutes ces expériences, j'ai décidé de créer Graphite Paysage pour relever plus de défis et vous accompagner dans tous vos projets.",
 
 	"Contribution" : "© 2018 Bertrand Samson",
 	"Where to meet" : "Où me rencontrer ?",
