Changement du texte mon parcours, maj Readme

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,9 +34,10 @@
 	"Advice Text" :"Je vous accompagnerai dans le choix des végétaux, pour que le projet soit adapté au climat, et je vous guiderai dans le choix des matériaux pour un espace harmonieux.",
 	
 	
-	"Resume Text 1" : "Après un bac Scientifique, j'ai effectué un BTSA Aménagement du Paysage au lycée horticole d'Evreux. Pour aller plus loin dans ce domaine, j'ai poursuivi mes études avec une licence professionnelle Aménagement du paysage option infographie.",
-	"Resume Text 2" : "Après une expérience d'environ 3 ans d'infographiste pour des projets du domaine public en Normandie, j'ai déménagé dans les Alpes-Maritimes. J'y ai travaillé 3 ans en tant que dessinatrice mais aussi en tant qu'ouvrier paysagiste, ce qui m'a permis d'approfondie mes connaissances techniques.",
+	"Resume Text 1" : "Titulaire d'une licence professionnelle Aménagement du paysage option infographie, j'ai d'abord exercé en tant que dessinatrice dans le cadre de projets publics en Normandie.",
+	"Resume Text 2" : "J'ai ensuite déménagé dans les Alpes-Maritimes où j'ai travaillé en tant que dessinatrice mais aussi en tant qu'ouvrier paysagiste, ce qui m'a permis d'approfondir mes connaissances techniques.",
 	"Resume Text 3" : "Forte de toutes ces expériences, j'ai décidé de créer Graphite Paysage pour relever plus de défis et vous accompagner dans tous vos projets.",
+
 	"Contribution" : "© 2018 Bertrand Samson",
 	"Where to meet" : "Where to meet ?",
 	"Want to say hello" : "Want to talk about your project ?",
