Ajout de la traduction anglaise

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,40 +5,40 @@
 	"Realisations" : "My realizations",
 	"What we do" : "What I do",
 	"Slider" : "Before / After",
-	"Resume" : "Mon parcours",
+	"Resume" : "My career",
 	"Contact" : "Contact Me",
 
 	"Subtitle" : "Together, design your project",
-	"Introduction section 1": "As a landscape designer, I worked for public and private partners. I will assist you for all your landscaping projects. Together, we will build your project, then, I will show you the render in several formats : photo montage, drawing, plan, 3D view, plant pallet. So, you will have a complete folder, giving you a global overview of your project.",
+	"Introduction section 1": "As a landscape designer, I worked for public and private partners. I will help you for all your landscaping projects. Together, we will build your project, then, I will show you the render in several formats : photomontage, drawing, plan, 3D view, plant pallet. So, you will have a complete folder, giving you a global overview of your project.",
 	
-	"Professional Title" : "Vous êtes un professionel ?",
-	"Professional Text":"Si votre entreprise n'a pas d'infographiste et que vous voulez présenter un projet structuré et imagé à vos clients, je vous propose mes services. Nous travaillerons ensemble afin de constituer un dossier complet :",
-	"Professional Text Elem 1" : "Plans et coupes techniques",
-	"Professional Text Elem 2" : "Plans texturés",
+	"Professional Title" : "Are you a professional ?",
+	"Professional Text":"If there isn't any ladnscape design in your company, and you have the will to show a structured and visual project to your customers, I offer you my services. We will work together with the aim of building a complete file :",
+	"Professional Text Elem 1" : "Sectional drawings",
+	"Professional Text Elem 2" : "Textured plans",
 	"Professional Text Elem 3" : "Photomontages",
-	"Professional Text Elem 4" : "Vues 3D",
-	"Professional Text Elem 5" : "Dessins du projet",
-	"Professional Text Elem 6" : "Palettes végétales",
+	"Professional Text Elem 4" : "3D view",
+	"Professional Text Elem 5" : "Hand-drawings",
+	"Professional Text Elem 6" : "Plant palet",
 
-	"Private Title" : "Vous êtes un particulier ?",
- 	"Private Text":"Vous voulez aménager votre jardin ? Vous cherchez des idées ? Je suis là pour vous aider dans la conception de cet espace de vie. Grâce à un suivi personnalisé nous construirons votre projet. Une fois le dossier finalisé :",
- 	"Private Text Elem 1":"Je vous suggère des entreprises et fais faire des devis pour trouver le choix le plus intéressant pour vous.",
-	"Private Text Elem 2":"ou",
-	"Private Text Elem 3":"Je vous fourni l'appui technique pour réaliser les travaux vous même.",
+	"Private Title" : "Are you a private person ?",
+ 	"Private Text":"Do you want to landscape your garden ? You are looking for ideas ? I'm here to support you for the design of this living space. With a customized follow-up, we will build your project. Once the file finalized :",
+ 	"Private Text Elem 1":"I will looking for the most attractive companies, and I will ask for an estimate of costs.",
+	"Private Text Elem 2":"or",
+	"Private Text Elem 3":"I will provide you support to do the realization yourself.",
 
 	"Diagnostic Title" : "Diagnostic",	
-	"Diagnostic Text" : "J'analyse le terrain existant ainsi que ses contraintes. Je prends en compte vos envies et vos besoins, pour créer un jardin en harmonie avec vos attentes.",
+	"Diagnostic Text" : "I analyze the existing land and his constraints. I take into account your desires and your needs, to create a garden going beyond your expectations.",
 	
-	"Project Title" : "Projet",
-	"Project Text" : "Grâce à différents supports ( plans, photomontages, etc. ) vous visualiserez le projet et appréhenderez mieux ce nouvel espace.",
+	"Project Title" : "Project",
+	"Project Text" : "Thanks to several medias ( plans, photomontages, etc. ) you will visualize directly your project, and get a better apprehension of this new space.",
 	
-	"Advice Title" : "Conseils techniques",
-	"Advice Text" :"Je vous accompagnerai dans le choix des végétaux, pour que le projet soit adapté au climat, et je vous guiderai dans le choix des matériaux pour un espace harmonieux.",
+	"Advice Title" : "Technical  advices",
+	"Advice Text" :"I will help you to choose the plants, in order to keep the project well adapted to the climate, and I will guide you to select the best materials to build a harmonious space.",	
 	
-	
-	"Resume Text 1" : "Titulaire d'une licence professionnelle Aménagement du paysage option infographie, j'ai d'abord exercé en tant que dessinatrice dans le cadre de projets publics en Normandie.",
-	"Resume Text 2" : "J'ai ensuite déménagé dans les Alpes-Maritimes où j'ai travaillé en tant que dessinatrice mais aussi en tant qu'ouvrier paysagiste, ce qui m'a permis d'approfondir mes connaissances techniques.",
-	"Resume Text 3" : "Forte de toutes ces expériences, j'ai décidé de créer Graphite Paysage pour relever plus de défis et vous accompagner dans tous vos projets.",
+	"Resume Text 1" : "With the professional degree 'Landscape designer, with infography option', I first work as draughtswoman for public projects in Normandie.",
+	"Resume Text 2" : "Then  I moved to Les Alpes maritimes where I worked as draughtswoman but also as landscape worker. This experience allow me to develop my technical knowledges.",	
+	"Resume Text 3" : "With this expertise, I decided to create Graphite Paysage to have more challenges to deal with, and support you in every aspects of your project.",
+
 
 	"Contribution" : "© 2018 Bertrand Samson",
 	"Where to meet" : "Where to meet ?",
