--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,7 +1,7 @@
 {
 	"About" : "À propos de",
 	"About Company" : "À propos de {{company}}",
-	"Projects" : "Professionel / Particulier",
+	"Projects" : "Professionnel / Particulier",
 	"Realisations" : "Mes réalisations",
 	"What we do" : "Ce que je fais",
 	"Slider" : "Avant / Après",
@@ -11,7 +11,7 @@
 	"Subtitle" : "Ensemble, construisons votre projet",
 	"Introduction section 1": "Dessinatrice paysagiste ayant travaillé pour le domaine public ainsi que pour le privé, je vous assisterai pour tous vos projets d'aménagements extérieurs. Nous ferons ensemble un diagnostic de l'existant et un point sur vos besoins. Je pourrai ainsi monter un dossier complet vous présentant le projet. Basée dans la région PACA, je pourrai me déplacer pour les projets concernant cette région. Il est aussi possible de travailler à distance via photos et plans.",
 	
-	"Professional Title" : "Vous êtes un professionel ?",
+	"Professional Title" : "Vous êtes un professionnel ?",
 	"Professional Text":"Si votre entreprise n'a pas d'infographiste et que vous voulez présenter un projet structuré et imagé à vos clients, je vous propose mes services. Nous travaillerons ensemble afin de constituer un dossier complet :",
 	"Professional Text Elem 1" : "Plans et coupes techniques",
 	"Professional Text Elem 2" : "Plans texturés",
