Add partnership section

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -39,6 +39,7 @@
 	"Resume Text 2" : "Then I moved to Les Alpes maritimes where I worked as a draughtswoman but also as a landscape worker. This experience allowed me to develop my technical knowledge.",	
 	"Resume Text 3" : "With this expertise, I decided to create Graphite Paysage to have more challenges to deal with, and support you in every aspects of your project.",
 
+	"Partnership" : "Partnership",
 
 	"Contribution" : "© 2018 Bertrand Samson",
 	"Where to meet" : "Where to meet ?",
