--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -39,6 +39,8 @@
 	"Resume Text 2" : "J'ai ensuite déménagé dans les Alpes-Maritimes où j'ai travaillé en tant que dessinatrice mais aussi en tant qu'ouvrier paysagiste, ce qui m'a permis d'approfondir mes connaissances techniques.",
 	"Resume Text 3" : "Forte de toutes ces expériences, j'ai décidé de créer Graphite Paysage pour relever plus de défis et vous accompagner dans tous vos projets.",
 
+	"Partnership" : "Partneriat",
+
 	"Contribution" : "© 2018 Bertrand Samson",
 	"Where to meet" : "Où me rencontrer ?",
 	"Want to say hello" : "Vous voulez parler de votre projet ?",
